--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ jwcrypto==1.4.2
 jws==0.1.3
 numpy==1.24.2
 oauth2client==3.0.0
+opencv-contrib-python==4.7.0.72
 pandas==1.5.3
 pkce==1.0.3
 proto-plus==1.22.2
